--- a/day-14/simple-python-app/buildspec.yml
+++ b/day-14/simple-python-app/buildspec.yml
@@ -2,9 +2,9 @@ version: 0.2
 
 env:
   parameter-store:
-    DOCKER_REGISTRY_USERNAME: /myapp/docker-credentials/username
-    DOCKER_REGISTRY_PASSWORD: /myapp/docker-credentials/password
-    DOCKER_REGISTRY_URL: /myapp/docker-registry/url
+    DOCKER_REGISTRY_USERNAME: /docker/username
+    DOCKER_REGISTRY_PASSWORD: /docker/password
+    DOCKER_REGISTRY_URL: docker/urlname
 phases:
   install:
     runtime-versions:
@@ -12,7 +12,7 @@ phases:
   pre_build:
     commands:
       - echo "Installing dependencies..."
-      - pip install -r day-13/simple-python-app/requirements.txt
+      - pip install -r day-14/simple-python-app/requirements.txt
   build:
     commands:
       - echo "Running tests..."
